<resources>
    <string name="app_name">Aloha</string>
    <string name="welcome">Bienvenido</string>
    <string name="username">Nº de DNI</string>
    <string name="password">Contraseña</string>
    <string name="signin">Ingresar</string>
    <string name="signup">Registrarse</string>
    <string name="lost_password">No recuerdo mi contraseña</string>
    <string name="help">Necesito ayuda</string>
    <string name="date">Fecha:</string>
    <string name="from">Desde:</string>
    <string name="type_home">Tipo de Vivienda:</string>
    <string name="to">Hasta:</string>
    <string name="price">Precio:</string>
    <string name="inventory">Inventario:</string>
    <string name="map">Mapa:</string>
    <string name="map_link">Ver en mapa</string>
    <string name="menu_home">Servicios disponibles</string>
    <string name="menu_profile">Mis datos</string>
    <string name="menu_my_services">Mis servicios</string>
    <string name="menu_help">Ayuda</string>
    <string name="menu_logout">Salir</string>
    <string name="something_wrong">Error: Ocurrió un problema, intenta comunicarte con nosotros.</string>
    <string name="assigned_service">Se te asignó este servicio.</string>
    <string name="empty_list">No se encontraron servicios.</string>
    <string name="loading">Actualizando ..</string>
    <string name="support_title">CENTRO DE AYUDA</string>
    <string name="support_welcome">Aloha querido usuario.</string>
    <string name="support_description_1">En Aloha queremos que tu experiencia sea la más placentera, es por eso que estamos abiertos a escuchar todo tipo de sugerencias, dudas o problemas que puedas encontrar.</string>
    <string name="support_description_2">Debajo encontrarás los medios por el cuál podrás comunicarte con nosotros, recuerda que es posible que te solicitemos tu número de DNI para poder saber con quién estamos hablando y poder darte una ayuda más personalizada.</string>
    <string name="support_call">Llamar</string>
    <string name="support_whatsapp">Whatsapp</string>
    <string name="sign_in">Ingresar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
