<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f6"
    tools:context="pe.aloha.app.aloha.UI.QuotationActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v4.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <android.support.constraint.ConstraintLayout
                android:id="@+id/address_information_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#ffffff"
                android:padding="10dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="154dp">

                <TextView
                    android:id="@+id/quotation_from_type_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/quotation_label_from_type_home"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/quotation_label_from_type_home" />

                <TextView
                    android:id="@+id/quotation_label_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="10dp" />

                <TextView
                    android:id="@+id/quotation_from"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/quotation_label_from"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/quotation_label_from" />

                <TextView
                    android:id="@+id/quotation_to"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/quotation_label_to"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/quotation_label_to" />

                <TextView
                    android:id="@+id/quotation_label_from_type_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/type_home"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/quotation_from" />

                <TextView
                    android:id="@+id/quotation_to_type_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/quotation_label_to_type_home"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/quotation_label_to_type_home" />

                <TextView
                    android:id="@+id/quotation_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/quotation_label_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/quotation_label_date" />

                <TextView
                    android:id="@+id/quotation_label_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/from"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/quotation_date" />

                <TextView
                    android:id="@+id/quotation_label_to_type_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/type_home"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/quotation_to" />

                <TextView
                    android:id="@+id/quotation_label_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/to"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/quotation_from_type_home" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/price_information_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address_information_container"
                android:background="#ffffff"
                android:padding="10dp">

                <TextView
                    android:id="@+id/quotation_label_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/price"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/quotation_price"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/quotation_label_price"
                    app:layout_constraintEnd_toEndOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <RelativeLayout
                android:id="@+id/intenvory_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price_information_container"
                android:layout_margin="10dp"
                android:background="#ffffff"
                android:padding="20dp">

                <TextView
                    android:id="@+id/quotation_label_inventory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/inventory"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/empty_inventory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/quotation_label_inventory"
                    android:text="Esta cotización no cuentae con un inventario"
                    android:visibility="gone" />

                <FrameLayout
                    android:id="@+id/inventory_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/quotation_label_inventory">

                </FrameLayout>

            </RelativeLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/map_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/intenvory_container"
                android:background="#ffffff"
                android:padding="10dp">

                <TextView
                    android:id="@+id/quotation_label_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/map"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/button"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:onClick="onOpenMap"
                    android:text="@string/map_link"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:layout_editor_absoluteY="0dp" />
            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/accept_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/map_container"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:onClick="onAcceptService"
                android:text="Tomar Servicio"
                android:textColor="@android:color/background_light"
                android:visibility="gone" />
        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
